grammar.js
    start: $ => repeat(
      choice(
        $.program_definition,
        //optional($.function_definition) //todo
      )
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    exec_cics_statement: $ => seq(
      $._EXEC,
      $._CICS,
      optional($.exec_block_content),
      $._END_EXEC
    ),

    // EXEC SQL statement - captures SQL as opaque block
    exec_sql_statement: $ => seq(
      $._EXEC,
      $._SQL,
      optional($.exec_block_content),
      $._END_EXEC
    ),

    // EXEC DLI statement - captures IMS/DL/I commands as opaque block
    exec_dli_statement: $ => seq(
      $._EXEC,
      $._DLI,
      optional($.exec_block_content),
      $._END_EXEC
    ),

    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _EXEC: $ => token(prec(10, /[eE][xX][eE][cC]/)),
    _CICS: $ => token(prec(10, /[cC][iI][cC][sS]/)),
    _SQL: $ => token(prec(10, /[sS][qQ][lL]/)),
    _DLI: $ => token(prec(10, /[dD][lL][iI]/)),
    _END_EXEC: $ => token(prec(10, /[eE][nN][dD]-[eE][xX][eE][cC]/)),
  }
});
